<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cesar.formulariocontactos.MainActivity">

    <EditText
        android:id="@+id/pnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/pnombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pfechanac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:hint="Fecha de Nacimiento"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ptelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/ptelefono"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/boton"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/boton"
        android:textColor="@color/black"
        app:backgroundTint="@color/material_on_background_disabled" />

    <EditText
        android:id="@+id/pdescrpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/pdescripcion"
        android:inputType="textMultiLine" />

</RelativeLayout>